--- a/src/main/resources/assets/new_soviet/lang/en_us.json
+++ b/src/main/resources/assets/new_soviet/lang/en_us.json
@@ -1,15 +1,116 @@
 {
   "itemGroup.new_soviet.building_blocks": "Soviet Building Blocks",
   "block.new_soviet.sand_tiles": "Sand Tiles",
-  "block.new_soviet.mossy_sand_tiles": "Mossy Sand Tiles",
   "block.new_soviet.cracked_sand_tiles": "Cracked Sand Tiles",
+  "block.new_soviet.mossy_sand_tiles": "Mossy Sand Tiles",
   "block.new_soviet.small_sand_tiles": "Small Sand Tiles",
   "block.new_soviet.small_cracked_sand_tiles": "Small Cracked Sand Tiles",
   "block.new_soviet.herringbone_sand_tiles": "Herringbone Sand Tiles",
   "block.new_soviet.cross_sand_tiles": "Cross Sand Tiles",
   "block.new_soviet.big_sand_tiles": "Big Sand Tiles",
   "block.new_soviet.sand_bricks": "Sand Bricks",
-  "block.new_soviet.mossy_sand_bricks": "Mossy Sand Bricks",
   "block.new_soviet.cracked_sand_bricks": "Cracked Sand Bricks",
-  "block.new_soviet.big_sand_bricks": "Big Sand Bricks"
+  "block.new_soviet.mossy_sand_bricks": "Mossy Sand Bricks",
+  "block.new_soviet.big_sand_bricks": "Big Sand Bricks",
+  "block.new_soviet.teal_tiles": "Teal Tiles",
+  "block.new_soviet.cracked_teal_tiles": "Cracked Teal Tiles",
+  "block.new_soviet.mossy_teal_tiles": "Mossy Teal Tiles",
+  "block.new_soviet.small_teal_tiles": "Small Teal Tiles",
+  "block.new_soviet.small_cracked_teal_tiles": "Small Cracked Teal Tiles",
+  "block.new_soviet.glazed_teal_tiles": "Glazed Teal Tiles",
+  "block.new_soviet.cracked_glazed_teal_tiles": "Cracked Glazed Teal Tiles",
+  "block.new_soviet.variated_teal_tiles": "Variated Teal Tiles",
+  "block.new_soviet.aquamarine_tiles": "Aquamarine Tiles",
+  "block.new_soviet.cracked_aquamarine_tiles": "Cracked Aquamarine Tiles",
+  "block.new_soviet.mossy_aquamarine_tiles": "Mossy Aquamarine Tiles",
+  "block.new_soviet.dirty_aquamarine_tiles": "Dirty Aquamarine Tiles",
+  "block.new_soviet.small_aquamarine_tiles": "Small Aquamarine Tiles",
+  "block.new_soviet.small_cracked_aquamarine_tiles": "Small Cracked Aquamarine Tiles",
+  "block.new_soviet.glazed_aquamarine_tiles": "Glazed Aquamarine Tiles",
+  "block.new_soviet.cracked_glazed_aquamarine_tiles": "Cracked Glazed Aquamarine Tiles",
+  "block.new_soviet.small_diorite_tiles": "Small Diorite Tiles",
+  "block.new_soviet.small_cracked_diorite_tiles": "Small Cracked Diorite Tiles",
+  "block.new_soviet.big_diorite_tiles": "Big Diorite Tiles",
+  "block.new_soviet.diorite_bricks": "Diorite Bricks",
+  "block.new_soviet.cracked_diorite_bricks": "Cracked Diorite Bricks",
+  "block.new_soviet.mossy_diorite_bricks": "Mossy Diorite Bricks",
+  "block.new_soviet.calcite_tiles": "Calcite Tiles",
+  "block.new_soviet.cracked_calcite_tiles": "Cracked Calcite Tiles",
+  "block.new_soviet.mossy_calcite_tiles": "Mossy Calcite Tiles",
+  "block.new_soviet.diagonal_calcite_tiles": "Diagonal Calcite Tiles",
+  "block.new_soviet.dripstone_tiles": "Dripstone Tiles",
+  "block.new_soviet.cracked_dripstone_tiles": "Cracked Dripstone Tiles",
+  "block.new_soviet.mossy_dripstone_tiles": "Mossy Dripstone Tiles",
+  "block.new_soviet.dripstone_bricks": "Dripstone Bricks",
+  "block.new_soviet.deepslate_tiles": "Deepslate Tiles",
+  "block.new_soviet.cracked_deepslate_tiles": "Cracked Deepslate Tiles",
+  "block.new_soviet.mossy_deepslate_tiles": "Mossy Deepslate Tiles",
+  "block.new_soviet.small_deepslate_tiles": "Small Deepslate Tiles",
+  "block.new_soviet.small_cracked_deepslate_tiles": "Small Cracked Deepslate Tiles",
+  "block.new_soviet.diagonal_deepslate_tiles": "Diagonal Deepslate Tiles",
+  "block.new_soviet.light_blue_tiles": "Light Blue Tiles",
+  "block.new_soviet.cracked_light_blue_tiles": "Cracked Light Blue Tiles",
+  "block.new_soviet.mossy_light_blue_tiles": "Mossy Light Blue Tiles",
+  "block.new_soviet.small_light_blue_tiles": "Small Light Blue Tiles",
+  "block.new_soviet.small_cracked_light_blue_tiles": "Small Cracked Light Blue Tiles",
+  "block.new_soviet.glazed_light_blue_tiles": "Glazed Light Blue Tiles",
+  "block.new_soviet.cracked_glazed_light_blue_tiles": "Cracked Glazed Light Blue Tiles",
+  "block.new_soviet.light_blue_bricks": "Light Blue Bricks",
+  "block.new_soviet.cracked_light_blue_bricks": "Cracked Light Blue Bricks",
+  "block.new_soviet.mossy_light_blue_bricks": "Mossy Light Blue Bricks",
+  "block.new_soviet.big_granite_tiles": "Big Granite Tiles",
+  "block.new_soviet.small_granite_tiles": "Small Granite Tiles",
+  "block.new_soviet.small_cracked_granite_tiles": "Small Cracked Granite Tiles",
+  "block.new_soviet.green_white_tiles": "Green White Tiles",
+  "block.new_soviet.cracked_green_white_tiles": "Cracked Green White Tiles",
+  "block.new_soviet.mossy_green_white_tiles": "Mossy Green White Tiles",
+  "block.new_soviet.tuff_tiles": "Tuff Tiles",
+  "block.new_soviet.cracked_tuff_tiles": "Cracked Tuff Tiles",
+  "block.new_soviet.mossy_tuff_tiles": "Mossy Tuff Tiles",
+  "block.new_soviet.big_tuff_tiles": "Big Tuff Tiles",
+  "block.new_soviet.tuff_bricks": "Tuff Bricks",
+  "block.new_soviet.cracked_tuff_bricks": "Cracked Tuff Bricks",
+  "block.new_soviet.mossy_tuff_bricks": "Mossy Tuff Bricks",
+  "block.new_soviet.industrial_warning": "Industrial Warning Stripes",
+  "block.new_soviet.gray_warning": "Gray Warning Stripes",
+  "block.new_soviet.red_warning": "Red Warning Stripes",
+  "block.new_soviet.orange_warning": "Orange Warning Stripes",
+  "block.new_soviet.yellow_warning": "Yellow Warning Stripes",
+  "block.new_soviet.lime_warning": "Lime Warning Stripes",
+  "block.new_soviet.green_warning": "Green Warning Stripes",
+  "block.new_soviet.cyan_warning": "Cyan Warning Stripes",
+  "block.new_soviet.light_blue_warning": "Light Blue Warning",
+  "block.new_soviet.blue_warning": "Blue Warning Stripes",
+  "block.new_soviet.purple_warning": "Purple Warning Stripes",
+  "block.new_soviet.magenta_warning": "Magenta Warning Stripes",
+  "block.new_soviet.metal_plating": "Metal Plating Block",
+  "block.new_soviet.concrete_wall": "Concrete Wall",
+  "block.new_soviet.herringbone_acacia_planks": "Herringbone Acacia Planks",
+  "block.new_soviet.cross_acacia_planks": "Cross Acacia Planks",
+  "block.new_soviet.herringbone_oak_planks": "Herringbone Oak Planks",
+  "block.new_soviet.cross_oak_planks": "Cross Oak Planks",
+  "block.new_soviet.herringbone_birch_planks": "Herringbone Birch Planks",
+  "block.new_soviet.cross_birch_planks": "Cross Birch Planks",
+  "block.new_soviet.herringbone_crimson_planks": "Herringbone Crimson Planks",
+  "block.new_soviet.cross_crimson_planks": "Cross Crimson Planks",
+  "block.new_soviet.herringbone_dark_oak_planks": "Herringbone Dark Oak Plaks",
+  "block.new_soviet.cross_dark_oak_planks": "Cross Dark Oak Planks",
+  "block.new_soviet.herringbone_jungle_planks": "Herringbone Jungle Planks",
+  "block.new_soviet.cross_jungle_planks": "Cross Jungle Planks",
+  "block.new_soviet.herringbone_mangrove_planks": "Herringbone Mangrove Planks",
+  "block.new_soviet.cross_mangrove_planks": "Cross Mangrove Planks",
+  "block.new_soviet.herringbone_spruce_planks": "Herringbone Spruce Planks",
+  "block.new_soviet.cross_spruce_planks": "Cross Spruce Planks",
+  "block.new_soviet.herringbone_parquet": "Herringbone Parquet",
+  "block.new_soviet.straight_parquet": "Straight Parquet",
+  "block.new_soviet.separated_parquet": "Separated Parquet",
+  "block.new_soviet.green_linoleum": "Green Linoleum",
+  "block.new_soviet.blue_linoleum": "Blue Linoleum",
+  "block.new_soviet.red_linoleum": "Red Linoleum",
+  "block.new_soviet.gray_linoleum": "Gray Linoleum",
+  "block.new_soviet.orange_linoleum": "Orange Linoleum",
+  "block.new_soviet.brown_linoleum": "Brown Linoleum",
+  "block.new_soviet.cyan_linoleum": "Cyan Linoleum",
+  "block.new_soviet.cross_orange_linoleum": "Cross Orange Linoleum",
+  "block.new_soviet.cross_brown_linoleum": "Cross Brown Linoleum"
 }
