--- a/src/main/resources/assets/new_soviet/lang/en_us.json
+++ b/src/main/resources/assets/new_soviet/lang/en_us.json
@@ -73,6 +73,9 @@
   "block.new_soviet.tuff_bricks": "Tuff Bricks",
   "block.new_soviet.cracked_tuff_bricks": "Cracked Tuff Bricks",
   "block.new_soviet.mossy_tuff_bricks": "Mossy Tuff Bricks",
+  "block.new_soviet.whitewash": "Whitewash",
+  "block.new_soviet.cracked_whitewash": "Cracked Whitewash",
+  "block.new_soviet.very_cracked_whitewash": "Very Cracked Whitewash",
   "block.new_soviet.industrial_warning": "Industrial Warning Stripes",
   "block.new_soviet.gray_warning": "Gray Warning Stripes",
   "block.new_soviet.red_warning": "Red Warning Stripes",
