--- a/src/main/resources/assets/new_soviet/lang/en_us.json
+++ b/src/main/resources/assets/new_soviet/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemGroup.new_soviet.building_blocks": "Soviet Building Blocks",
   "itemGroup.new_soviet.items": "Soviet Items",
   "itemGroup.new_soviet.custom": "Soviet Additions",
+  "itemGroup.new_soviet.combat": "Soviet Combat",
   "block.new_soviet.sand_tiles": "Sand Tiles",
   "block.new_soviet.cracked_sand_tiles": "Cracked Sand Tiles",
   "block.new_soviet.mossy_sand_tiles": "Mossy Sand Tiles",
@@ -126,6 +127,9 @@
   "block.new_soviet.radio": "Radio",
   "block.new_soviet.lamp": "Lamp",
   "block.new_soviet.ceiling_fan": "Ceiling Fan",
-  "block.new_soviet.siren": "Siren"
-
+  "block.new_soviet.siren": "Siren",
+  "item.new_soviet.dice": "Dice",
+  "item.new_soviet.dice.thrown": "Dice was thrown with result:",
+  "subtitles.new_soviet.dice_throw": "Dice thrown",
+  "block.new_soviet.landmine": "AP Landmine"
 }
