--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@
 * Add windows
 * Add (with functionality) present appliance/furniture/electronics textures
 * Figure out what to do with "NII wall", nii floor, tilled block
+* Add achievement criterion for dice
 
 === FIX STUFF ===
 * PO2 wall
