--- a/src/main/resources/assets/new_soviet/lang/en_us.json
+++ b/src/main/resources/assets/new_soviet/lang/en_us.json
@@ -128,7 +128,12 @@
   "block.new_soviet.lamp": "Lamp",
   "block.new_soviet.ceiling_fan": "Ceiling Fan",
   "block.new_soviet.siren": "Siren",
-  "item.new_soviet.dice": "Dice",
+  "item.new_soviet.dice_d6": "Dice",
+  "item.new_soviet.dice_d4": "Dice",
+  "item.new_soviet.dice_d20": "Dice",
+  "item.new_soviet.dice_d6.tooltip": "Six sides",
+  "item.new_soviet.dice_d4.tooltip": "Four sides",
+  "item.new_soviet.dice_d20.tooltip": "Twenty sides",
   "item.new_soviet.dice.thrown": "Dice was thrown with result:",
   "item.new_soviet.dice.thrown_multiple": "Dice were thrown with result:",
   "subtitles.new_soviet.dice_throw": "Dice thrown",
