--- a/src/main/resources/assets/new_soviet/lang/en_us.json
+++ b/src/main/resources/assets/new_soviet/lang/en_us.json
@@ -137,5 +137,8 @@
   "item.new_soviet.dice.thrown": "Dice was thrown with result:",
   "item.new_soviet.dice.thrown_multiple": "Dice were thrown with result:",
   "subtitles.new_soviet.dice_throw": "Dice thrown",
-  "block.new_soviet.landmine": "AP Landmine"
+  "block.new_soviet.landmine": "AP Landmine",
+  "block.new_soviet.chiseled_mangrove_door": "Chiseled Mangrove Door",
+  "block.new_soviet.chiseled_oak_door": "Chiseled Oak Door",
+  "block.new_soviet.chiseled_spruce_door": "Chiseled Spruce Door"
 }
