Add siren functionality

--- a/src/main/resources/assets/new_soviet/lang/en_us.json
+++ b/src/main/resources/assets/new_soviet/lang/en_us.json
@@ -140,5 +140,6 @@
   "block.new_soviet.landmine": "AP Landmine",
   "block.new_soviet.chiseled_mangrove_door": "Chiseled Mangrove Door",
   "block.new_soviet.chiseled_oak_door": "Chiseled Oak Door",
-  "block.new_soviet.chiseled_spruce_door": "Chiseled Spruce Door"
+  "block.new_soviet.chiseled_spruce_door": "Chiseled Spruce Door",
+  "subtitles.new_soviet.siren": "Siren goes off"
 }
