Doors, sirens and blocks

--- a/src/main/resources/assets/new_soviet/lang/en_us.json
+++ b/src/main/resources/assets/new_soviet/lang/en_us.json
@@ -141,6 +141,7 @@
   "block.new_soviet.chiseled_mangrove_door": "Chiseled Mangrove Door",
   "block.new_soviet.chiseled_oak_door": "Chiseled Oak Door",
   "block.new_soviet.chiseled_spruce_door": "Chiseled Spruce Door",
+  "block.new_soviet.chiseled_birch_door": "Chiseled Birch Door",
   "subtitles.new_soviet.siren": "Siren goes off",
   "block.new_soviet.yellow_concrete_with_bars": "Yellow Concrete With Bars",
   "block.new_soviet.beige_concrete_with_bars": "Beige Concrete With Bars",
