Add lightbulb item for fixing lightbulb lamp

--- a/src/main/resources/assets/new_soviet/lang/en_us.json
+++ b/src/main/resources/assets/new_soviet/lang/en_us.json
@@ -150,5 +150,6 @@
   "block.new_soviet.blue_concrete_with_bars": "Blue Concrete With Bars",
   "block.new_soviet.red_concrete_with_bars": "Red Concrete With Bars",
   "subtitles.new_soviet.light_bulb_broken": "Light bulb breaks",
-  "block.new_soviet.light_bulb": "Light Bulb"
+  "block.new_soviet.light_bulb": "Light Bulb Lamp",
+  "item.new_soviet.light_bulb_item": "Light Bulb"
 }
