Add missing concrete translation strings

--- a/src/main/resources/assets/new_soviet/lang/en_us.json
+++ b/src/main/resources/assets/new_soviet/lang/en_us.json
@@ -143,6 +143,18 @@
   "block.new_soviet.chiseled_spruce_door": "Chiseled Spruce Door",
   "block.new_soviet.chiseled_birch_door": "Chiseled Birch Door",
   "subtitles.new_soviet.siren": "Siren goes off",
+  "block.new_soviet.yellow_concrete": "Yellow Concrete",
+  "block.new_soviet.beige_concrete": "Beige Concrete",
+  "block.new_soviet.white_concrete": "White Concrete",
+  "block.new_soviet.green_concrete": "Green Concrete",
+  "block.new_soviet.blue_concrete": "Blue Concrete",
+  "block.new_soviet.red_concrete": "Red Concrete",
+  "block.new_soviet.cracked_yellow_concrete": "Cracked Yellow Concrete",
+  "block.new_soviet.cracked_beige_concrete": "Cracked Beige Concrete",
+  "block.new_soviet.cracked_white_concrete": "Cracked White Concrete",
+  "block.new_soviet.cracked_green_concrete": "Cracked Green Concrete",
+  "block.new_soviet.cracked_blue_concrete": "Cracked Blue Concrete",
+  "block.new_soviet.cracked_red_concrete": "Cracked Red Concrete",
   "block.new_soviet.yellow_concrete_with_bars": "Yellow Concrete With Bars",
   "block.new_soviet.beige_concrete_with_bars": "Beige Concrete With Bars",
   "block.new_soviet.white_concrete_with_bars": "White Concrete With Bars",
